# workshop-2.0.0

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/chats/: pytest_conversation.md
docs/text/: hw_tree.txt
notebooks/: workshop_create_flow
scripts/: cleanproj.sh  compile.py  jlab_open.py  newproj-init.sh
src/workshop/: __init__.py  __main__.py  _metadata.py  constants.py  ghtools.py  new_project_dialog.py  pip_tools.py  startmeup.py  workshop.py
src/workshop/commands/: __init__.py  archive.py  backup.py  clean.py  compile.py  create.py  open.py  publish.py  run.py
src/workshop/data/: description.txt  epilog.txt  open_opts.csv  requirements.txt  std_opts.pkl
src/workshop/etc/: config.ini
src/workshop/projects/: __init__.py  cgi.py  cppproject.py  driver.py  filter.py  gtkapp.py  module.py  package.py  program.py  project.py  script.py  tkapp.py  webapp.py
src/workshop/projects/builders/: __init__.py  builder.py  cppbuilder.py
src/workshop/scripts/: get_packages.py  pkg-tool.sh
src/workshop/templates/gtkapp-1.0.1/src/: index.html
src/workshop/templates/hw-1.0.1/data/: author.txt
src/workshop/templates/hwww-1.0.1/: index.html
src/workshop/templates/hwww-1.0.1/cgi-bin/: cgignition.py
src/workshop/templates/hwww-1.0.1/data/: manifest.json
src/workshop/templates/hwww-1.0.1/hwww/: __init__.py  __main__.py  hwww.py
src/workshop/templates/hwww-1.0.1/js/: script.js
src/workshop/templates/lsd-1.0.1/data/: std_opts.csv
src/workshop/templates/tkapp-1.0.1/: requirements.in
tests/: test_projects.py
(+23 files in other folders)
